Editando main.tex con las nuevas correcciones

--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,6 @@
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
 \usepackage{graphicx}
-\usepackage{float}
 \begin{document}
 \begin{titlepage}
 \centering
@@ -24,14 +23,12 @@
 {\large Marzo de 2025 \par} 
 \end{titlepage}
 \setcounter{page}{1}
-% Aqui iria la parte de bases de datos
 \section {Requisitos de Datos}
 \subsection{Simple thermodynamic model of thermostats for a liquid
 into a tank: an analytical approach 
  }
  \begin{itemize}
-    \item https://0310a08hk-y-https-link-springer-com.konrad.metaproxy.org/article/10.1007/s10665-024-10416-5
-    
+    \item Salazar, R., Deaza, F., Zamudio, J., \& García, L. (2025). \textit{Simple thermodynamic model of thermostats for a liquid into a tank: an analytical approach}. \textit{Journal of Engineering Mathematics, 150}(22). https://doi.org/10.1007/s10665-024-10416-5
     \item Imagen de referencia:
 \end{itemize}
 
